--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
   "nicegui",
   "plotext",
   "rioxarray",
+  "spectral",
   "xarray",
 ]
 
@@ -42,3 +43,6 @@ repository = "http://github.com/isofit/isofit-plots"
 
 [project.scripts]
 isoplots = "isoplots:__main__.cli"
+
+[project.entry-points."xarray.backends"]
+envi = "isoplots.isonice.wd:EnviBackendEntrypoint"
