--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ dependencies = [
   "matplotlib",
   "nicegui",
   "plotext",
-  "rioxarray",
-  "spectral",
+  # "rioxarray",
+  # "spectral",
   "xarray",
 ]
 
